<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/black">

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="16dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/blue"
        android:textColor="@android:color/black"
        android:padding="16dp" />
</LinearLayout>
